--- a/index.css
+++ b/index.css
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6, p {
   margin-top: 0;
 }
 
+table {
+  border-collapse: collapse;
+}
+
 textarea {
   outline: none;
   border: none;
@@ -60,4 +64,12 @@ body {
 
 #viewer a {
   color: #622ec5;
+}
+
+table, th, td {
+  border: 1px solid #aaa;
+}
+
+th, td {
+  padding: .5em;
 }
